netpol/allowapitodb.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allowapitodb
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api
